# py-syntactic

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  syntactic.code-workspace  venv.sh
docs/: api.rst  conf.py  index.rst
src/syntactic/: __init__.py  _engine.py  capitalize.py  case_conversion.py  make_dimnames.py  make_names.py  make_words.py  pad_zeros.py  rename.py
tests/: __init__.py  test_autopad_zeros.py  test_camel_case.py  test_capitalize.py  test_dotted_case.py  test_kebab_case.py  test_make_dimnames.py  test_make_names.py  test_make_words.py  test_rename.py  test_snake_case.py  test_upper_camel_case.py
